unpackaged/main/default/objects/Confirmation_Disclaimer__mdt/Confirmation_Disclaimer__mdt.object-meta.xml
<CustomObject>
    <description>Confirmation Verbiage/Disclaimers</description>
    <label>Confirmation Disclaimer</label>
    <pluralLabel>Confirmation Disclaimers</pluralLabel>
</CustomObject>