unpackaged/main/default/objects/Confirmation_Disclaimer__mdt/fields/ACG_Club__c.field-meta.xml
<CustomField>
    <fullName>ACG_Club__c</fullName>
    <label>ACG Club</label>
    <length>255</length>
    <type>Text</type>
</CustomField>