unpackaged/main/default/objects/Confirmation_Disclaimer__mdt/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account is on auto renew</description>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>