unpackaged/main/default/objects/Confirmation_Disclaimer__mdt/fields/boldCheck__c.field-meta.xml
<CustomField>
    <fullName>boldCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check for content in bold</description>
    <label>IsBoldCheck</label>
    <type>Checkbox</type>
</CustomField>