unpackaged/main/default/objects/Confirmation_Disclaimer__mdt/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <label>Club</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACG Core</fullName>
                <default>true</default>
                <label>ACG Core</label>
            </value>
            <value>
                <fullName>ACG Colorado</fullName>
            </value>
            <value>
                <fullName>ACG Carolina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>