unpackaged/main/default/objects/Confirmation_Disclaimer__mdt/fields/Verbiage_Disclaimers__c.field-meta.xml
<CustomField>
    <fullName>Verbiage_Disclaimers__c</fullName>
    <label>Verbiage/Disclaimers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>